login and register validation on front and backend

--- a/src/main/resources/static/css/style2.css
+++ b/src/main/resources/static/css/style2.css
@@ -9,7 +9,9 @@ body {
     background: #f3f3f3;
     flex-direction: column;
     margin: 0;
-    background-image: url("https://wallpapers.com/images/featured/movie-9pvmdtvz4cb0xl37.jpg");}
+    background-image: url("https://wallpapers.com/images/featured/movie-9pvmdtvz4cb0xl37.jpg");
+
+}
 
 .main {
     background-color: #fff;
