--- a/src/main/resources/templates/loginFailed.html
+++ b/src/main/resources/templates/loginFailed.html
@@ -5,11 +5,39 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>Error logging in</title>
 </head>
+<style>
+
+  body{
+    background-image: url("https://wallpapers.com/images/featured/movie-9pvmdtvz4cb0xl37.jpg");
+  }
+
+  h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    color: darkred;
+    font-weight: bold;
+    -webkit-text-stroke: 3px black;
+  }
+
+  a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+</style>
 <body>
 
-<div th:text="${message}"></div>
 
-<button type="button" class="btn btn-primary"><a href ="/" style="color: white;" th:text="#{goBackToLoginRegister}">Go back to Login/Register Page</a></button>
+<header>
+  <h2 class="heading" style="margin-right: 1400px;">Movies</h2>
+</header>
+
+<h2 th:text="${message}"></h2>
+
+<a href ="/" ><button type="button" class="btn btn-primary">Go back to Login Page</button></a>
 
 </body>
 </html>
