--- a/src/main/resources/templates/registerFailed.html
+++ b/src/main/resources/templates/registerFailed.html
@@ -6,10 +6,39 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <title>Register Failed!</title>
 </head>
-<body>
-<p th:text="#{registerFailed}">Register Failed</p>
+<style>
 
-<button type="button" class="btn btn-primary"><a href ="/" style="color: white;" th:text="#{goBackToLoginRegister}">Go back to Login/Register Page</a></button>
+  body{
+  background-image: url("https://wallpapers.com/images/featured/movie-9pvmdtvz4cb0xl37.jpg");
+  }
+
+  h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    color: darkred;
+    font-weight: bold;
+    -webkit-text-stroke: 3px black;
+  }
+
+  a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+</style>
+<body>
+
+<header>
+  <h2 class="heading" style="margin-right: 1400px;">Movies</h2>
+</header>
+
+
+<h2>Registration Failed</h2>
+
+<a href ="/user_indexSignUp"><button type="button" class="btn btn-primary">Go back to Register Page</button></a>
 
 
 
