--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
-<html lang=en xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>Registered!</title>
+
+    <title>Success!</title>
 </head>
 <body>
-<!-- Include the menu bar fragment -->
-<!--<div th:replace="~{fragments/menu :: menu-bar}"></div>-->
-
-<div th:if="${registeredUser != null}">
-    <p th:text="#{registerSuccess}">User registered successfully!</p>
+<div th:replace="~{fragments/menu :: menu-bar}"></div>
+<div th:if="${#ctx.session.loggedInUser != null}">
+    <p th:text="|Welcome ${#ctx.session.loggedInUser.getUsername()} you are a registered user now|">
+    </p>
 </div>
-
 <br>
-<br>
-
-<p style="color: red;" th:text="#{nowyoumustpurchase}">Now you must purchase subscription before being able to login into our system</p>
-<button type="button" class="btn btn-primary"><a href ="/addSubscriptionPart2" style="color: white;" th:text="#{goToSubPage}">Go to Subscription Page</a></button>
-
 </body>
 </html>
