--- a/src/main/resources/templates/user_index.html
+++ b/src/main/resources/templates/user_index.html
@@ -18,19 +18,29 @@
       color: red;
     }
 
+    h2 {
+      font-size: 50px;
+      color: darkred;
+      font-weight: bold;
+      -webkit-text-stroke: 3px black;
+    }
+
   </style>
 </head>
 <body>
 <header>
-  <h1 class="heading">Movies</h1>
+  <h2 class="heading" style="margin-right: 1400px;">Movies</h2>
 </header>
+
+<h1 class="heading">Login</h1>
 
 <div class="container" style="height:700px;">
 
-  <div class="slider"></div>
+
   <div class="btn">
-    <button class="login"  >Login</button>
-    <button class="signup" >Signup</button>
+    <a href="user_indexSignUp">
+    <button class="signup" >Go to Signup Page</button>
+    </a>
   </div>
 
   <div class="form-section">
@@ -66,46 +76,6 @@
       </p>
     </div>
 
-    <div class="signup-box" ><br><br>
-      <form id="form" method="post" action="/registerUser"  onsubmit="return validateForm()">
-        <p>
-        <label for="username" >Username:</label>
-        <input type="text" id="username" name="username"
-               placeholder="Enter username">
-          <span id="username-error" class="error-message"></span>
-        </p>
-        <p>
-        <label for="email" >Email:</label>
-        <input type="email" id="email" name="email"
-               placeholder="Enter email">
-          <span id="email-error" class="error-message"></span>
-        </p>
-        <p>
-          <label for="password" >Password:</label>
-          <input type="password" id="password" name="password"
-                 placeholder="Enter password" >
-          <span id="password-error" class="error-message"></span>
-        </p>
-        <p>
-          <label for="password2" >Confirm Password:</label>
-          <input type="password" id="password2" name="password2"
-                 placeholder="Confirm password">
-          <span id="password2-error" class="error-message"></span>
-        </p>
-        <p>
-        <label for="address" >Address:</label>
-        <input type="text" id="address" name="address"
-               placeholder="Enter your Address">
-          <span id="address-error" class="error-message"></span>
-        </p>
-        <div class="wrap">
-          <button type="submit" value="Submit">
-            Sign up
-          </button>
-        </div>
-      </form>
-    </div>
-
   </div>
 
 </div>
@@ -114,20 +84,6 @@
 
 
 <script>
-  let signup = document.querySelector(".signup");
-  let login = document.querySelector(".login");
-  let slider = document.querySelector(".slider");
-  let formSection = document.querySelector(".form-section");
-
-  signup.addEventListener("click", () => {
-    slider.classList.add("moveslider");
-    formSection.classList.add("form-section-move");
-  });
-
-  login.addEventListener("click", () => {
-    slider.classList.remove("moveslider");
-    formSection.classList.remove("form-section-move");
-  });
 
   function validateLogin(){
 
@@ -151,92 +107,11 @@
     }
 
     if (valid){
-      alert("Login Successful")
+      alert("Login Attempt")
     }else{
       return false;
     }
   }
-</script>
-
-
-<script>
-
-
-  function validateForm() {
-
-    const username = document.getElementById("username").value;
-    const password = document.getElementById("password").value;
-    const password2 = document.getElementById("password2").value;
-    const email = document.getElementById("email").value;
-    const address = document.getElementById("address").value;
-
-
-    const usernameErr = document.getElementById("username-error");
-    const passwordErr = document.getElementById("password-error");
-    const passwordErr2 = document.getElementById("password2-error");
-    const emailErr = document.getElementById("email-error");
-    const addressErr = document.getElementById("address-error");
-
-    usernameErr.textContent = "";
-    passwordErr.textContent = "";
-    passwordErr2.textContent = "";
-    emailErr.textContent = "";
-    addressErr.textContent = "";
-
-
-    const usernameRegex = /^[a-zA-Z]{3,25}$/;
-    const passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{7,70}$/;
-
-    if (username === ""){
-      usernameErr.textContent = "Username was left empty";
-      return false;
-    }
-    else if (!usernameRegex.test(username)){
-      usernameErr.textContent = "Username has to be between 3 - 25 characters";
-      return false;
-    }
-    else if (email === ""){
-      emailErr.textContent = "Email was left empty";
-      return false;
-    }
-    else if(password === ""){
-      passwordErr.textContent = "Password was left empty";
-      return false;
-    }
-    else if (!passwordRegex.test(password)){
-      passwordErr.textContent = "Please enter a password with at least 7 characters and maximum 70 characters, one uppercase letter, one lowercase letter and one number";
-      return false;
-    }
-    else if (password2 === ""){
-      passwordErr2.textContent = "Confirm Password was left empty";
-      return false;
-    }
-    else if (password != password2){
-
-      passwordErr2.textContent = "Password did not match: Please try again...";
-      return false;
-
-    }
-    else if (address === ""){
-      addressErr.textContent = "Address was left empty";
-      return false;
-    }
-    else{
-      alert("Registration form complete")
-      return true;
-    }
-
-    // const orm = require('orm'); const db = orm.connect('mysql://localhost/software_project');  db.query('SELECT * FROM users where username = ?', (err, rows) => {   if (err) throw err;   console.log(rows); }).end();
-  }
-
-
-/*
-  function resetErrors(){
-
-    document.getElementById("username-error").textContent = "";
-  }
-
- */
 </script>
 
 
