--- a/src/main/resources/templates/user_indexSignUp.html
+++ b/src/main/resources/templates/user_indexSignUp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style2.css" />
+ <link rel="stylesheet" href="/css/style2.css" />
   <title>Title</title>
   <style>
     .error-message {
@@ -30,15 +30,16 @@
   <h2 class="heading" style="margin-right: 1400px;">Movies</h2>
 </header>
 
-<h1 class="header">Register</h1>
+
+<div class="btn">
+  <a href ="/">
+    <button class="login">Go to Login Page</button>
+  </a>
+</div>
 
 <div class="container" style="height:1000px;">
 
-  <div class="btn">
-    <a href ="/">
-      <button class="login">Go to Login Page</button>
-    </a>
-  </div>
+  <h1 class="header" style="align-items: center">Register</h1>
 
   <div class="form-section">
 
@@ -100,6 +101,7 @@
           </button>
         </div>
       </form>
+
     </div>
 
   </div>
@@ -122,7 +124,7 @@
 
     const usernameRegex = /^[a-zA-Z]{3,25}$/;
     const passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{7,70}$/;
-    const displayNameRegex = /^[a-zA-Z]{3,25}$/;
+    const displayNameRegex = /^[a-zA-Z0-9]{3,25}$/;
 
     if (username === ""){
       alert("Username is left empty, try register again");
@@ -156,10 +158,9 @@
     }
     else if (dateOfBirth === ""){
       alert("Date Of Birth was left empty, try register again")
-
     }
     else{
-      alert("Registration form complete")
+      alert("Registration form complete, lets see if you are successfully registered")
       return true;
     }
 
