--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,8 @@
   <title th:text="#{index.title}"></title>
   <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
@@ -13,5 +15,29 @@
 <div>
   <p>Welcome To Our Movie Service</p>
 </div>
+
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Select Genre of movie
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="@{/viewByGenre(genre=${1})}">Action</a></li>
+    <li><a class="dropdown-item" href="@{/viewByGenre(genre=${1})}">Comedy</a></li>
+    <li><a class="dropdown-item" href="#"></a>Science-Fiction</li>
+    <li><a class="dropdown-item" href="#">Thriller</a></li>
+    <li><a class="dropdown-item" href="#">Animation</a></li>
+  </ul>
+</div>
+
+<div th:each="movie : ${movies}">
+  <div class="movie-card">
+    <h3 th:text="${movie.movieName}">Movie Title</h3>
+    <img th:src="@{${movie.movieImage}}" alt="Movie Poster" />
+    <p th:text="${movie.movieInfo}">Movie Description</p>
+    <p><strong>Release Date:</strong> <span th:text="${movie.dateOfRelease}">Release Date</span></p>
+    <p><strong>Length:</strong> <span th:text="${movie.movieLength}">Movie Length</span> mins</p>
+  </div>
+</div>
+
 </body>
 </html>
