--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,9 @@
   <title th:text="#{index.title}"></title>
   <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
@@ -28,14 +30,39 @@
     <li><a th:href="@{/viewByGenre(genre=${5})}">Animation</a></li>
   </ul>
 </div>
+
 <div th:each="movie : ${movies}">
-  <div class="movie-card">
-    <h3 th:text="${movie.movie_name}">Movie Title</h3>
-    <img th:src="@{'/css/images/'+${movie.movie_image}}" alt="Movie image"/>
-    <p th:text="${movie.movie_info}">Movie Description</p>
-    <p><strong>Release Date:</strong> <span th:text="${movie.date_of_release}">Release Date</span></p>
-    <p><strong>Length:</strong> <span th:text="${movie.movie_length}">Movie Length</span> mins</p>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" th:src="@{'/css/images/'+${movie.movie_image}}" alt="Movie image"  style=width:100%;/>
+      <div class="carousel-caption">
+        <h3 th:text="${movie.movie_name}">Movie Title</h3>
+        <p th:text="${movie.movie_info}">Movie Description</p>
+        <p><strong>Release Date:</strong> <span th:text="${movie.date_of_release}">Release Date</span></p>
+        <p><strong>Length:</strong> <span th:text="${movie.movie_length}">Movie Length</span> mins</p>
+      </div>
+    </div>
   </div>
+  <div class="carousel-item">
+    <img class="d-block w-100" th:src="@{'/css/images/'+${movie.movie_image}}" alt="Movie image"  style=width:100%;/>
+    <div class="carousel-caption">
+      <h3 th:text="${movie.movie_name}">Movie Title</h3>
+      <p th:text="${movie.movie_info}">Movie Description</p>
+      <p><strong>Release Date:</strong> <span th:text="${movie.date_of_release}">Release Date</span></p>
+      <p><strong>Length:</strong> <span th:text="${movie.movie_length}">Movie Length</span> mins</p>
+    </div>
+  </div>
+</div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 </div>
 </body>
 </html>
