changing dateOfBirth for user to date instead of using datetime

--- a/src/main/resources/templates/user_indexSignUp.html
+++ b/src/main/resources/templates/user_indexSignUp.html
@@ -90,7 +90,7 @@
         </p>
         <p>
           <label for="dateOfBirth" >Date Of Birth:</label>
-          <input type="datetime-local" id="dateOfBirth" name="dateOfBirth"
+          <input type="date" id="dateOfBirth" name="dateOfBirth"
                  placeholder="Enter your date of birth">
         <p class="message" th:text="${message7}"></p>
         <span id="dateOfBirth-error" class="error-message"></span>
