--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,16 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+
+  <style>
+    img{
+      width:  500px;
+      height: 500px;
+      background-size: cover;
+    }
+  </style>
 </head>
+
 <body>
 <!-- Include the menu bar fragment -->
 <div th:replace="~{fragments/menu :: menu-bar}"></div>
@@ -28,39 +37,28 @@
     <li><a th:href="@{/viewByGenre(genre=${5})}">Animation</a></li>
   </ul>
 </div>
+<br>
 
-<div th:each="movie : ${movies}">
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" th:src="@{'/css/images/'+${movie.movie_image}}" alt="Movie image"  style=width:100%;/>
-      <div class="carousel-caption">
-        <h3 th:text="${movie.movie_name}">Movie Title</h3>
-        <p th:text="${movie.movie_info}">Movie Description</p>
-        <p><strong>Release Date:</strong> <span th:text="${movie.date_of_release}">Release Date</span></p>
-        <p><strong>Length:</strong> <span th:text="${movie.movie_length}">Movie Length</span> mins</p>
+
+
+<div class="row row-cols-1 row-cols-md-3 g-4">
+  <div th:each="movie : ${movies}">
+  <div class="col">
+    <div class="card h-100">
+      <img th:src="@{'/css/images/'+${movie.movie_image}}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 th:text="${movie.movie_name}" class="card-title">Card title</h5>
+        <p  th:text="${movie.movie_info}" class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div class="card-footer">
+        <small th:text="  |Date Of Release:  ${movie.date_of_release} |"  class="text-muted">Last updated 3 mins ago</small>
       </div>
     </div>
   </div>
-  <div class="carousel-item">
-    <img class="d-block w-100" th:src="@{'/css/images/'+${movie.movie_image}}" alt="Movie image"  style=width:100%;/>
-    <div class="carousel-caption">
-      <h3 th:text="${movie.movie_name}">Movie Title</h3>
-      <p th:text="${movie.movie_info}">Movie Description</p>
-      <p><strong>Release Date:</strong> <span th:text="${movie.date_of_release}">Release Date</span></p>
-      <p><strong>Length:</strong> <span th:text="${movie.movie_length}">Movie Length</span> mins</p>
-    </div>
   </div>
 </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div>
+
+
+
 </body>
 </html>
