--- a/src/main/resources/templates/user_index.html
+++ b/src/main/resources/templates/user_index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <header>
-  <h2 class="heading" style="margin-right: 1400px;">Movies</h2>
+  <h2 class="heading" style="margin-right: 1400px;">ScreenSafari</h2>
 </header>
 
 <div class="btn">
@@ -106,7 +106,7 @@
     }
 
     if (valid){
-      alert("Login Attempt")
+     // alert("Login Attempt")
     }else{
       return false;
     }
