--- a/src/main/resources/templates/loginFailed.html
+++ b/src/main/resources/templates/loginFailed.html
@@ -32,7 +32,7 @@
 
 
 <header>
-  <h2 class="heading" style="margin-right: 1400px;">Movies</h2>
+  <h2 class="heading" style="margin-right: 1400px;">ScreenSafari</h2>
 </header>
 
 <h2 th:text="${message}"></h2>
