--- a/src/main/resources/templates/registerFailed.html
+++ b/src/main/resources/templates/registerFailed.html
@@ -32,7 +32,7 @@
 <body>
 
 <header>
-  <h2 class="heading" style="margin-right: 1400px;">Movies</h2>
+  <h2 class="heading" style="margin-right: 1400px;">ScreenSafari</h2>
 </header>
 
 
