--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -22,6 +22,12 @@
             <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" th:href="@{/movie_index}" >Movies</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" th:href="@{/streamingservice_index}" >Streaming Services</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" th:href="@{/logOut}" >Logout</a>
           </li>
         </ul>
