--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -3,15 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/styleSub.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <title>Success!</title>
+
+
 </head>
 <body>
-<div th:replace="~{fragments/menu :: menu-bar}"></div>
+<!--<div th:replace="~{fragments/menu :: menu-bar}"></div>-->
+
 <div th:if="${#ctx.session.loggedInUser != null}">
-    <p th:text="|Welcome ${#ctx.session.loggedInUser.getUsername()} you are a registered user now|">
-    </p>
+
+<div class="container">
+
+
+<h2 style="font-weight: bold">Choose your Subscription Plan</h2>
+    <div class="price-row">
+        <div class="price-col">
+            <p>Standard</p>
+            <h3>£9.99<span>/ yearly</span></h3>
+            <ul>
+                <li>5 percent discount on purchased movies</li>
+                <li>Have access to purchase the cheapest merch</li>
+                <li>A Yearly Subscription</li>
+            </ul>
+            <a th:href="@{/SubPlanStandard(subscriptionPlanId=${1})}"> <button>Choose Plan</button></a>
+        </div>
+
+        <div class="price-col">
+            <p>Premium</p>
+            <h3>£14.99<span>/ yearly</span></h3>
+            <ul>
+                <li>5 percent discount on purchased movies</li>
+                <li>Have access to purchase the cheapest merch</li>
+                <li>A Yearly Subscription</li>
+            </ul>
+            <a th:href="@{/SubPlanStandard(subscriptionPlanId=${2})}"> <button>Choose Plan</button></a>
+        </div>
+
+        <div class="price-col">
+            <p>Student</p>
+            <h3>£4.99<span>/ yearly</span></h3>
+            <ul>
+                <li>5 percent discount on purchased movies</li>
+                <li>Have access to purchase the cheapest merch</li>
+                <li>75 percent cheaper than Premium Plan</li>
+            </ul>
+            <a th:href="@{/SubPlanStandard(subscriptionPlanId=${3})}"> <button>Choose Plan</button></a>
+        </div>
+
+    </div>
+
+</div>
+
+
+    <a href ="/registerSuccessUser" style="align-items: center"><button type="button" class="btn btn-primary">Skip this</button></a>
+
 </div>
 <br>
 </body>
