Subscription and Subscription plan controller methods to purchase a subscription for user based on the plan they chose

--- a/src/main/resources/templates/purchaseSubscription.html
+++ b/src/main/resources/templates/purchaseSubscription.html
@@ -10,6 +10,12 @@
     .message{
       color: red;
     }
+
+    body{
+      background-image: url("https://wallpapers.com/images/featured/movie-9pvmdtvz4cb0xl37.jpg");
+
+    }
+
   </style>
 </head>
 <body>
