--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -25,6 +25,9 @@
             <a class="nav-link active" aria-current="page" th:href="@{/movie_index}" >Movies</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" th:href="@{/subscription_index}" >Subscriptions</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" th:href="@{/logOut}" >Logout</a>
           </li>
         </ul>
