--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -7,7 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <title>Success!</title>
+<style>
+    body{
+        background-image: url("https://wallpapers.com/images/featured/movie-9pvmdtvz4cb0xl37.jpg");
 
+    }
+
+</style>
 
 </head>
 <body>
