--- a/src/main/resources/templates/loginSuccessful.html
+++ b/src/main/resources/templates/loginSuccessful.html
@@ -5,6 +5,66 @@
   <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+  <style>
+    h1 {
+      color:white;
+      text-align: center;
+      font-size: 50px;
+      padding-top: 70px;
+      font-weight: normal;
+      margin-bottom: 0;
+    }
+
+    h2 {
+      color:white;
+      text-align: center;
+      font-size: 30px;
+      padding-bottom: 70px;
+      font-weight: normal;
+      margin-bottom: 0;
+    }
+
+    .scroll-tray {
+      white-space: nowrap;
+    }
+    .scroll-tray div {
+      display: inline-block;
+    }
+
+    .scroll-tray img {
+      border-radius: 0.3rem;
+      margin: 7px 5px;
+      padding: 0;
+      width: 340px;
+    }
+
+    .scroll-holder {
+      overflow-x: hidden;
+    }
+
+    .scroll-holder .scroll-tray:first-child {
+      animation: scroll-tray-hero 180s linear infinite;
+    }
+
+    .scroll-holder .scroll-tray:last-child {
+      animation: scroll-tray-hero 120s linear infinite;
+    }
+
+    @keyframes scroll-tray-hero {
+      0% {
+        transform: translateX(0);
+      }
+
+      99.99% {
+        transform: translateX(-7098px);
+      }
+
+      100% {
+        transform: translateX(0);
+      }
+    }
+
+  </style>
   <title>Success!</title>
 </head>
 <body>
@@ -14,6 +74,22 @@
   </p>
 </div>
 <br>
+
+
+
+<section>
+  <div class="scroll-holder">
+    <div class="scroll-tray">
+      <div th:each="movie : ${movies}">
+        <div>
+          <img th:src="@{'https://image.tmdb.org/t/p/w500/'+${movie.getBackdrop_path()}}" class="card-img-top" alt="...">
+        </div>
+      </div>
+    </div>
+    <div class="scroll-tray">
+    </div>
+  </div>
+</section>
 <!--<a href ="logOut">Logout</a>-->
 </body>
 </html>
