--- a/src/main/resources/templates/movie_index.html
+++ b/src/main/resources/templates/movie_index.html
@@ -1,20 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Movie Index</title>
-  <meta charset="UTF-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+
+
+    <title>Title</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <style>
+        .swiper {
+            width: 74%;
+            height: 70%;
+            margin-top: 100px;
+        }
+
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            background: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+
+        .swiper {
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .card{
+            margin: 0.9em;
+            height: 28em;
+            transition: transform .5s;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+
+        p{
+            font-size: 10px;
+
+        }
+
+        .dropdown{
+            margin-top: 50px;
+            margin-left: 50px;
+        }
+
+        button{
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        }
+
+        a.three:link {
+            text-decoration: none;
+        }
+
+        a.three:visited {
+            text-decoration: none;
+        }
+
+        a.three:hover {
+            text-decoration: underline;
+        }
+
+        a.three:active {
+            text-decoration: underline;
+        }
+
+        p.two:visited {color:#0000ff;}
+        p.two:hover {font-size:150%;}
+
+
+        .dropdown-menu{
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        }
+    </style>
 </head>
 <body>
 <div th:replace="~{fragments/menu :: menu-bar}"></div>
 
-<h1 style="text-align: center;">Movie Page</h1>
-<br>
 
-<h4>View All Movies</h4>
-<button type="button" class="btn btn-primary">
-  <a href="/viewMovies" style="color: white;">View All Movies</a>
 
-</button>
+<div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Select Genre Of Movie
+    </button>
+    <ul class="dropdown-menu">
+        <div th:each="genre : ${genres}">
+            <li><a class="three" th:href="@{/viewMovieByGenre(id=${genre.getId()})}"><p class="two" th:text="${genre.getName()}"></p></a></li>
+        </div>
+    </ul>
+</div>
+
+
+<div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">
+            <div th:each="movieByGenre : ${movieByGenres}">
+
+
+            <div class="card" style="width: 18rem;">
+                <img th:src="@{'https://image.tmdb.org/t/p/w500/'+${movieByGenre.getBackdrop_path()}}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 th:text="${movieByGenre.getTitle()}" class="card-title"></h5>
+                    <p th:text="${movieByGenre.getOverview()}"class="card-text"></p>
+                    <a th:href="@{/movieTrailer(id=${movieByGenre.getId()})}" class="btn btn-primary">View Videos</a>
+                </div>
+                <div class="card-footer">
+                    <small th:text="  |Date Of Release:  ${movieByGenre.getRelease_date()} |"  class="text-muted">Last updated 3 mins ago</small>
+                </div>
+            </div>
+
+
+            </div>
+
+        </div>
+        <div class="swiper-slide">
+        </div>
+        <div class="swiper-slide"></div>
+
+
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+</div>
+
+<!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+<!-- Initialize Swiper -->
+<script>
+    var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        spaceBetween: 30,
+        loop: true,
+        pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+        },
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+    });
+</script>
+
 </body>
 </html>
