BillingAddressController - added method to get Cart information with movies and pricing. Done validation for billingAddressController

--- a/src/main/resources/templates/checkout_index.html
+++ b/src/main/resources/templates/checkout_index.html
@@ -95,7 +95,7 @@
                         <label for="cardName">Name on Card</label>
                         <input type="text" id="cardName" name="cardName" placeholder="John More Doe">
                         <label for="cardNumber">Credit card number</label>
-                        <input type="text" id="cardNumber" name="cardNumber" placeholder="1111-2222-3333-4444">
+                        <input type="text" id="cardNumber" name="cardNumber" placeholder="1111222233334444">
                         <label for="expmonth">Exp Month:</label>
                         <div class="date-field">
                             <div class="month">
@@ -211,7 +211,7 @@
                             <label for="cardName">Name on Card</label>
                             <input type="text" id="cardName" name="cardName" placeholder="John More Doe">
                             <label for="cardNumber">Credit card number</label>
-                            <input type="text" id="cardNumber" name="cardNumber" placeholder="1111-2222-3333-4444">
+                            <input type="text" id="cardNumber" name="cardNumber" placeholder="1111222233334444">
                             <label for="expmonth">Exp Month:</label>
                             <div class="date-field">
                                 <div class="month">
