--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -45,6 +45,12 @@
             <a class="nav-link active" aria-current="page" th:href="@{/store_index}" >Store</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" th:href="@{/friends}" >Friends</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" th:href="@{/notifications}" >notifications</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" th:href="@{/logOut}" >Logout</a>
           </li>
 
