review section in nav bar

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -51,6 +51,9 @@
             <a class="nav-link active" aria-current="page" th:href="@{/notifications}" >notifications</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" th:href="@{/review_form}" >Review</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" th:href="@{/logOut}" >Logout</a>
           </li>
 
