--- a/src/main/resources/templates/review_form.html
+++ b/src/main/resources/templates/review_form.html
@@ -23,7 +23,7 @@
             <textarea name="content" class="form-control" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
-        <a href="/reviews" class="btn btn-info mt-3">View Reviews</a>
+        <a href="/reviews" class="btn btn-primary">View Reviews</a>
 
     </form>
 </div>
