--- a/src/main/resources/templates/registerSuccessUser.html
+++ b/src/main/resources/templates/registerSuccessUser.html
@@ -5,16 +5,172 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
   <title>Registered!</title>
+
+  <style>
+    *{
+      margin: 0;
+      padding: 0;
+      /* font-family: poppins;
+
+       */
+      box-sizing: border-box;
+    }
+
+    body{
+      /* background: black;
+
+       */
+      color: #fff;
+    }
+
+    .wrapper{
+      padding: 10px 10%;
+    }
+
+
+    #card-area{
+      padding: 50px 0;
+    }
+
+    .box-area{
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      grid-gap: 40px;
+      margin-top: 50px;
+    }
+
+    .box{
+      border-radius: 10px;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
+    }
+
+    .box img{
+      width: 100%;
+      object-fit: fill;
+      border-radius: 10px;
+      display: block;
+      transistion: transform 0.5s
+    }
+
+    .overlay{
+      height: 0;
+      width: 100%;
+      background: linear-gradient(transparent, #1c1c1c 58% );
+      border-radius: 10px;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      padding: 0 40px;
+      text-align: center;
+      font-size: 14px;
+      transition: height 0.5s;
+    }
+
+    .overlay h3{
+      font-weight: 500;
+      margin-bottom: 5px;
+      margin-top: 2%;
+      font-family: bebas neue;
+      font-size: 30px;
+      letter-spacing: 2px;
+    }
+
+
+    .overlay a{
+      margin-top: 10px;
+      color: #262626;
+      text-decoration: none;
+      font-size: 14px;
+      background: #fff;
+      border-radius: 50px;
+      text-align: center;
+      padding: 5px 15px;
+    }
+
+    .boxLhover img{
+      transform: scale(1.2);
+    }
+
+    .box:hover .overlay{
+      height: 100%;
+    }
+
+    h1{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 50px;
+      color: darkred;
+      font-weight: bold;
+      -webkit-text-stroke: 3px black;
+    }
+
+    p{
+      font-size: 12px;
+      font-family: poppins;
+    }
+
+
+    h1{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 50px;
+      color: darkred;
+      font-weight: bold;
+      -webkit-text-stroke: 3px black;
+    }
+
+    .register{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      color: black;
+      font-size: 20px;
+      margin-top: 50px;
+    }
+  </style>
 </head>
 <body>
 <!-- Include the menu bar fragment -->
 <div th:replace="~{fragments/menu :: menu-bar}"></div>
 
 <div th:if="${#ctx.session.loggedInUser != null}">
-  <p th:text="|Welcome ${#ctx.session.loggedInUser.getUsername()} you are a registered user now|">
+  <p class="register" th:text="|Welcome ${#ctx.session.loggedInUser.getUsername()} you are a registered user now|">
   </p>
 </div>
+<br>
+
+<div id="card-area">
+  <div class="wrapper">
+    <div class="box-area">
+      <div th:each="movie : ${movies}">
+        <div class="box">
+          <img th:src="@{'https://image.tmdb.org/t/p/w500/'+${movie.getBackdrop_path()}}"  alt="">
+          <div class="overlay">
+            <h3 th:text="${movie.getTitle()}"> Mountain</h3>
+            <p th:text="${movie.getOverview()}" ></p>
+            <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
 </body>
 </html>
